Leon - 2nd Commit

--- a/Subjects.html
+++ b/Subjects.html
@@ -102,7 +102,7 @@
 								<a href="https://www.linkedin.com/" class="whiteText" target="_blank">LinkedIn</a> <br />
 						</div>							
 						<div class="col-md-1 text-left"> 	
-								<h4>Coming Soon</h4>
+								<h4>Upcoming</h4>
 								English<br />
 								Irish<br />	
 								Biology<br />	
